Add support for atomicity plus various fixes